[package]
name = "ch03-walkmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib.git" }
specs = { version = "0.20.0", features = ["specs-derive"] }
